exchanges images for provided thumbnails, wrapping issue due to image height

--- a/gallery_styles.css
+++ b/gallery_styles.css
@@ -1,3 +1,4 @@
-body {
-	background: blue;
+.flex {
+  display: flex;
+  flex-wrap: wrap;
 }
